doc browser(no empty folders)
git-svn-id: svn://svn.forge.objectweb.org/svnroot/spagobi/V_5.x/Server/trunk@24124 99afaf0d-6903-0410-885a-c66a8bbb5f81